# SciFi

./: CMakeLists.txt  README.md  buonanotte.sh  init_vis.mac  parallel.py  rateCheck.C  readgio.cpp  scifi.cc  scores.C  signals.C  signalslite.C  vis.mac
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  FiberHit.hh  FiberSD.hh  PixelHit.hh  PixelSD.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RunAction.hh  RunActionMessenger.hh  ScintHit.hh  SiPMModel.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  FiberHit.cc  FiberSD.cc  PixelHit.cc  PixelSD.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RunAction.cc  RunActionMessenger.cc  SteppingAction.cc  poly34.cc
tables/: BCF10_light_out.txt  BCF12_light_out.txt  BCF20_light_out.txt  SiPM_OCT_gain_25.txt  SiPM_OCT_gain_50.txt  SiPM_OCT_gain_75.txt  SiPM_det_eff_25_CS.txt  SiPM_det_eff_25_PE.txt  SiPM_det_eff_50_CS.txt  SiPM_det_eff_50_PE.txt  SiPM_det_eff_75_CS.txt  SiPM_det_eff_75_PE.txt  SiPM_photon_det_eff_gain_25.txt  SiPM_photon_det_eff_gain_50.txt  SiPM_photon_det_eff_gain_75.txt  SiPM_photon_gain_25.txt  SiPM_photon_gain_50.txt  SiPM_photon_gain_75.txt
